--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,19 +2,21 @@ project:
   type: website
 
 website:
-  title: "Medical Informatics"
   description: "Bridging data science with biology, health, and clinical research."
-  site-url: https://barbaradalmaso.github.io  # (opcional se publicar no GitHub Pages)
+  site-url: https://barbaradalmaso.github.io
   navbar:
     background: primary
     search: true
     left:
       - href: index.qmd
-        text: 🏠 Home
+        text: Home
+        icon: home
       - href: pipeline.qmd
-        text: 💻 Pipeline
+        text: Pipeline
+        icon: laptop
       - href: about.qmd
-        text: 👩 About
+        text: About
+        icon: person
     right:
       - icon: github
         href: https://github.com/barbaradalmaso
@@ -27,4 +29,26 @@ format:
   html:
     theme: lux
     toc: true
-    page-layout: full
+    toc-depth: 4
+    code-fold: true
+    code-summary: "Show code"
+    include-in-header:
+      - text: |
+          <!-- Font Awesome -->
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+          <!-- Google Fonts -->
+          <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+          <style>
+            body {
+              font-family: 'Noto Sans', sans-serif;
+              background-color: #f5f5f5; /* cinza claro de fundo */
+            }
+            .content-box {
+              max-width: 900px;         /* largura máxima da caixa */
+              margin: 40px auto;        /* centraliza */
+              background: #ffffff;      /* caixa branca */
+              padding: 40px;            /* respiro interno */
+              border-radius: 12px;      /* cantos arredondados */
+              box-shadow: 0 4px 12px rgba(0,0,0,0.1); /* sombra suave */
+            }
+          </style>
